Update some links

--- a/docs/06-cardano-testnets/03-getting-started.mdx
+++ b/docs/06-cardano-testnets/03-getting-started.mdx
@@ -34,14 +34,11 @@ There are a number of ways to install and run a Cardano node on testnet. The
 choice of the best-matching method depends on the operating system, level of
 technical expertise, and personal preferences.
 
-Building the node using Nix is the recommended method, as this is what IOG’s
-internal development teams use and consider the most reliable.
-
 For more information on the various options, see:
 
-- [Building the node using Nix](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/building-the-node-using-nix.md)
-- [Building the node from source](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/install.md)
-- [Building the node using Docker](https://hub.docker.com/r/inputoutput/cardano-node)
+- [Installing the node](https://developers.cardano.org/docs/get-started/installing-cardano-node)
+- [Cardano course: building the node](https://cardano-course.gitbook.io/cardano-course/handbook/module-1-build-and-run-the-node/building-the-node)
+- [Node installation process](https://developers.cardano.org/docs/operate-a-stake-pool/node-installation-process).
 
 ## Configurations
 
@@ -60,8 +57,8 @@ than Plutus V1 scripts. Plutus V1 scripts, however, are still supported.
 
 For more details, see:
 
-- [Understanding configuration files](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/understanding-config-files.md)
-- [Configuring the node using YAML](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/configuring-a-node-using-yaml.md)
+- [Running the node](https://developers.cardano.org/docs/get-started/running-cardano)
+- [Cardano course: running the node and connecting to a network](https://cardano-course.gitbook.io/cardano-course/handbook/module-1-build-and-run-the-node/running-the-node-and-connecting-to-a-network).
 
 ## Working with the Cardano testnets
 
@@ -111,7 +108,8 @@ cardano-cli query utxo \
 
 For more commands, see:
 
-- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/3_keys_and_addresses.md)
+- [Generating wallet keys](https://developers.cardano.org/docs/operate-a-stake-pool/generating-wallet-keys)
+- [Creating keys and addresses](https://cardano-course.gitbook.io/cardano-course/handbook/building-and-running-the-node/create-keys-and-addresses).
 
 :::note
 
@@ -134,7 +132,8 @@ run the following command to fund your address:
 ### Creating, signing, and submitting transactions
 
 You’re now ready to create, sign, and submit transactions on testnets. See the
-tutorial:
+tutorials:
 
-- [Building and signing transactions.](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/building-and-signing-tx.md)
+- [Building and signing transactions](https://developers.cardano.org/docs/get-started/create-simple-transaction)
+- [Creating simple transactions](https://cardano-course.gitbook.io/cardano-course/handbook/building-and-running-the-node/create-a-simple-transaction).
 
