--- a/docs/02-new-to-cardano/01-what-is-a-blockchain.mdx
+++ b/docs/02-new-to-cardano/01-what-is-a-blockchain.mdx
@@ -35,3 +35,5 @@ difference between these systems:
 + **Decentralized systems** — all data and records of transactions are stored not in one server, but in a system of interconnected, independent nodes and terminals. This ensures independence from centralized entities, transparency, and security. 
 
 Finally, blockchains not only provide an immutable and secure database but also act as a functional environment to transact funds, create digital currencies, and process complex deals using digital agreements [(smart contracts)](/new-to-cardano/what-is-a-smart-contract).
+
+test
