filip(fix): links and build errors

--- a/docs/about-cardano/02-new-to-cardano/01-what-is-a-blockchain.mdx
+++ b/docs/about-cardano/02-new-to-cardano/01-what-is-a-blockchain.mdx
@@ -6,8 +6,10 @@ metaTitle: What is a blockchain?
 A blockchain is a type of database or ledger that is duplicated and distributed
 to all participants within the blockchain network. It is made up of a set of
 interconnected nodes that store data or items of value in blocks. These blocks
-are validated, cryptograhpically secured, and linked to each other in chronological order in
-a chain. The information stored in the validated blocks of the blockchain cannot be altered later on. It is permanently inscribed in the distributed ledger.
+are validated, cryptograhpically secured, and linked to each other in
+chronological order in a chain. The information stored in the validated blocks
+of the blockchain cannot be altered later on. It is permanently inscribed in the
+distributed ledger.
 
 Blockchain technology, otherwise known as distributed ledger technology (DLT),
 provides a decentralized and accessible data structure for various records. Such
@@ -30,8 +32,18 @@ difference between these systems:
 
 ![data-storage](https://ucarecdn.com/af01444d-6881-4aab-a0a9-ec2ff6a0ea40/)
 
-+ **Centralized systems** — all data entries and activities are usually managed using one central server. This increases the risk of a single point of failure, and also means that the controlling entity (such as banks or government institutions, for example) act as decision-makers.
-+ **Distributed systems** — generally rely on multiple server nodes, each of which serves a subset of the total end clients.
-+ **Decentralized systems** — all data and records of transactions are stored not in one server, but in a system of interconnected, independent nodes and terminals. This ensures independence from centralized entities, transparency, and security. 
+- **Centralized systems** — all data entries and activities are usually managed
+  using one central server. This increases the risk of a single point of
+  failure, and also means that the controlling entity (such as banks or
+  government institutions, for example) act as decision-makers.
+- **Distributed systems** — generally rely on multiple server nodes, each of
+  which serves a subset of the total end clients.
+- **Decentralized systems** — all data and records of transactions are stored
+  not in one server, but in a system of interconnected, independent nodes and
+  terminals. This ensures independence from centralized entities, transparency,
+  and security.
 
-Finally, blockchains not only provide an immutable and secure database but also act as a functional environment to transact funds, create digital currencies, and process complex deals using digital agreements [(smart contracts)](/new-to-cardano/what-is-a-smart-contract).
+Finally, blockchains not only provide an immutable and secure database but also
+act as a functional environment to transact funds, create digital currencies,
+and process complex deals using digital agreements
+[(smart contracts)](/about-cardano/new-to-cardano/what-is-a-smart-contract).
