--- a/docs/about-cardano/03-learn/04-delegation.mdx
+++ b/docs/about-cardano/03-learn/04-delegation.mdx
@@ -28,7 +28,7 @@ There are three options ada holders can consider for delegating their stake:
 :::note
 
 If you are not familiar with Cardano CLI or stake pool operations, see
-[delegation tips here.](/new-to-cardano/how-to-delegate)
+[delegation tips here.](/about-cardano/new-to-cardano/how-to-delegate)
 
 :::
 
@@ -50,7 +50,7 @@ With the concept of delegation, any stakeholder can allow a stake pool to
 generate blocks for the Cardano network. Then the protocol will distribute the
 rewards to all participants, including the fees for the SPO. A stakeholder
 delegates to a particular pool ID, which is the hash of the operator's
-[verification key](/learn/cardano-keys#vrf-keys).
+[verification key](/about-cardano/learn/cardano-keys#vrf-keys).
 
 To limit the delegate’s block generation power to a certain range of epochs and
 slots, the stakeholder can limit the proxy signing key’s valid message space to
