--- a/docs/about-cardano/03-learn/07-consensus-explained.mdx
+++ b/docs/about-cardano/03-learn/07-consensus-explained.mdx
@@ -29,8 +29,8 @@ several peer-reviewed papers presented at top-tier conferences and publications
 in the area of cybersecurity and cryptography. Rather than relying on 'miners'
 (as in proof-of-work protocols) to solve computationally complex equations to
 create new blocks – and rewarding the first to do so – proof of stake selects
-[stake pools to create new blocks](/learn/cardano-node#how-does-it-work) based
-on the stake they control in the network.
+[stake pools to create new blocks](/about-cardano/learn/cardano-node#how-does-it-work)
+based on the stake they control in the network.
 
 ## How Ouroboros works
 
