--- a/docs/about-cardano/02-new-to-cardano/04-proof-of-stake.mdx
+++ b/docs/about-cardano/02-new-to-cardano/04-proof-of-stake.mdx
@@ -4,27 +4,26 @@ metaTitle: Proof of stake
 ---
 
 Proof of stake (PoS) is a type of
-[consensus mechanism](/learn/consensus-explained) or
-protocol that uses the amount of stake (or value) held in the system to
-determine consensus. In essence, a consensus protocol is what controls the laws
-and parameters governing the behavior of blockchains. Think of consensus as a
-ruleset that each network participant adheres to. As blockchains are not
-controlled by any single, central authority, a consensus protocol is used
-instead to allow distributed network participants to agree on the _history_ of
-the network captured on the blockchain – to reach consensus on what has
-happened, and continue from a single source of truth.
+[consensus mechanism](/about-cardano/learn/consensus-explained) or protocol that
+uses the amount of stake (or value) held in the system to determine consensus.
+In essence, a consensus protocol is what controls the laws and parameters
+governing the behavior of blockchains. Think of consensus as a ruleset that each
+network participant adheres to. As blockchains are not controlled by any single,
+central authority, a consensus protocol is used instead to allow distributed
+network participants to agree on the _history_ of the network captured on the
+blockchain – to reach consensus on what has happened, and continue from a single
+source of truth.
 
-Cardano is built on the ground-breaking PoS consensus
-protocol
+Cardano is built on the ground-breaking PoS consensus protocol
 [Ouroboros](https://iohk.io/en/blog/posts/2022/06/03/from-classic-to-chronos-the-implementations-of-ouroboros-explained/),
 and the first blockchain consensus protocol to be developed through
 peer-reviewed research. At the heart of the protocol are
-[stake pools](/learn/stake-pools), reliable server nodes run by a stake pool
-operator to which ada holders can delegate their stake. Stake pools are used to
-ensure that everyone can participate in the protocol, regardless of technical
-experience or availability to keep a node running. These stake pools focus on
-maintenance and hold the combined stake of various stakeholders in a single
-entity.
+[stake pools](/about-cardano/learn/stake-pools), reliable server nodes run by a
+stake pool operator to which ada holders can delegate their stake. Stake pools
+are used to ensure that everyone can participate in the protocol, regardless of
+technical experience or availability to keep a node running. These stake pools
+focus on maintenance and hold the combined stake of various stakeholders in a
+single entity.
 
 ## How does proof of stake compare to proof of work protocols?
 
