--- a/docs/about-cardano/03-learn/02-cardano-node.mdx
+++ b/docs/about-cardano/03-learn/02-cardano-node.mdx
@@ -15,19 +15,19 @@ contributing to the network.
 
 ## How does it work?
 
-[Stake pools](/learn/stake-pools) use the Cardano node to validate how the pool
-interacts with the network and are responsible for transaction processing and
-block production. They act as reliable server nodes that hold and maintain the
-combined stake of various stakeholders in a single entity.
+[Stake pools](/about-cardano/learn/stake-pools) use the Cardano node to validate
+how the pool interacts with the network and are responsible for transaction
+processing and block production. They act as reliable server nodes that hold and
+maintain the combined stake of various stakeholders in a single entity.
 
 ## Producing a block
 
 The goal of blockchain technology is the production of an
 independently-verifiable and cryptographically-linked chain of records (blocks).
 A network of block producers works to collectively advance the blockchain. A
-[consensus](/learn/consensus-explained) protocol
-provides transparency and decides which candidate blocks should be used to
-extend the chain.
+[consensus](/about-cardano/learn/consensus-explained) protocol provides
+transparency and decides which candidate blocks should be used to extend the
+chain.
 
 Submitted valid transactions might be included in any new block. A block is
 cryptographically signed by its producer and linked to the previous block in the
@@ -56,10 +56,12 @@ aggregated stake of their owners and other stakeholders, also known as
 _delegators_. Slot leaders are randomly elected from among the stake pools. The
 more stake a pool controls, the greater the chance it has of being elected as a
 slot leader to produce a new block that is accepted into the blockchain. This is
-the basic concept of [proof of stake (PoS)](/new-to-cardano/proof-of-stake). To maintain a level playing field,
-and prevent a situation where a small number of very large pools control the
-majority of stake, Cardano has an incentive system that discourages delegation
-to pools that already control a large portion of the total stake.
+the basic concept of
+[proof of stake (PoS)](/about-cardano/new-to-cardano/proof-of-stake). To
+maintain a level playing field, and prevent a situation where a small number of
+very large pools control the majority of stake, Cardano has an incentive system
+that discourages delegation to pools that already control a large portion of the
+total stake.
 
 ### Transaction validation
 
@@ -73,8 +75,6 @@ which will then be connected to other blocks in the chain.
 
 Related topics:
 
-- [About the Cardano network](/explore-cardano/cardano-network)
+- [About the Cardano network](/about-cardano/explore-more/cardano-network)
 
 :::
-
-
