--- a/docs/cardano-testnets/01-environments.mdx
+++ b/docs/cardano-testnets/01-environments.mdx
@@ -3,22 +3,31 @@ title: Testnet environments
 metaTitle: Testnet environments
 ---
 
+Cardano testnets sit at the vanguard of network development, providing sandboxed
+environments for continuing innovation, harnessing the power of the Cardano
+community to iterate and improve.
 
-Discover the various testnet environments available on Cardano to select the one best suited for your testing needs.
+Stake pool operators, exchanges, smart contract developers, and projects can
+engage with different early-stage and pre-production networks to actively test
+core Cardano functionality prior to deploying on mainnet.
+
+Discover the various testnet environments available on Cardano to select the one
+best suited for your testing needs.
 
 ## Early-stage testing networks
 
 ### SanchoNet
 
-SanchoNet is an early-stage testnet environment for testing CIP-1694 on-chain governance mechanisms. 
+SanchoNet is an early-stage testnet environment for testing CIP-1694 on-chain
+governance mechanisms.
 
 - [**SanchoNet configurations**](https://book.world.dev.cardano.org/env-sanchonet.html)
 
 ### Preview
 
-Preview is the network environment for testing release candidates
-and expanded test scenarios. Preview is meant for DApps, stake pool operators
-(SPOs), and exchanges who wish to test mature release candidates.
+Preview is the network environment for testing release candidates and expanded
+test scenarios. Preview is meant for DApps, stake pool operators (SPOs), and
+exchanges who wish to test mature release candidates.
 
 - [**Preview configurations**](https://book.world.dev.cardano.org/env-preview.html)
 
