delete a broken link

--- a/docs/about-cardano/05-evolution/04-upgrades/06-valentine.mdx
+++ b/docs/about-cardano/05-evolution/04-upgrades/06-valentine.mdx
@@ -38,8 +38,7 @@ The use of these scripts is similar to a [token minting process](https://github.
 :::info
 
 -   See the tutorial on [how to use SECP256K1 primitives](https://github.com/input-output-hk/Vasil-testnet/blob/main/secp-primitives-cip.md)
--   Alternatively, find [Plutus SECP256k1 examples here](https://gist.github.com/james-iohk/4b54ceefbc3ad3d6fdbc49350bd5b6a8)
--   And see the [PlutusTx API](https://github.com/input-output-hk/plutus/blob/node/1.35.4/plutus-tx/src/PlutusTx/Builtins.hs#L169-L202).
+-   and the [PlutusTx API](https://github.com/input-output-hk/plutus/blob/node/1.35.4/plutus-tx/src/PlutusTx/Builtins.hs#L169-L202).
 
 :::
 
