Add more references to tools and smart contracts

--- a/docs/developer-resources/welcome.mdx
+++ b/docs/developer-resources/welcome.mdx
@@ -63,17 +63,36 @@ To start working with native tokens, see:
 - [Developer portal native token tutorials](https://developers.cardano.org/docs/native-tokens/)
 - [Ledger explanations about native tokens](https://cardano-ledger.readthedocs.io/en/latest/explanations/index.html).
 
+You can also explore Cardano assets using a variety of [explorer tools](/about-cardano/new-to-cardano/cardano-tracking-tools#exploring-assets).
+
+
 ## Smart contracts
 
 To start working with smart contracts, see:
 
 - [Developer portal smart contract tutorials](https://developers.cardano.org/docs/smart-contracts/)
 - [Plutus Core documentation](https://plutus.readthedocs.io/en/latest/index.html)
-- [Marlowe documentation](https://docs.marlowe.iohk.io/docs/introduction).
+
+There are also many languages you can use to develop smart contracts:
+
+- [Aiken](https://github.com/aiken-lang/aiken) (Rust-like language)
+- [PlutusTx](https://github.com/IntersectMBO/plutus/tree/master/plutus-tx) (Haskell-based language for high assurance)
+- [Marlowe](https://github.com/input-output-hk/marlowe-cardano) (TypeScript),  [Plu-ts](https://github.com/HarmonicLabs/plu-ts) (TypeScript)
+- [OpShin](https://github.com/OpShin/opshin) (Python)
+- [Scalus](https://github.com/nau/scalus) (Scala).
+
+## Tools
+
+Explore Cardano's ecosystem:
+
+- [A list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)
+- [Builder tools](https://developers.cardano.org/tools/)
+- [Cardano Cube](https://www.cardanocube.com/cardano-ecosystem-interactive-map)
+- [Built on Cardano](https://builtoncardano.com/).
 
 ## Going further
 
-- Finally, if you’re beginning your developer journey with Cardano, check out
+- If you’re beginning your developer journey with Cardano, check out
   the [Cardano course](https://cardano-course.gitbook.io/cardano-course/)
   learning material. It includes simple tutorials on how to get started.
 - And if you want to know more about blockchain, distributed ledgers, and
@@ -81,5 +100,5 @@ To start working with smart contracts, see:
   [Cardano Academy video course](https://learn.academy.cardanofoundation.org/landing)!
 
 Keep navigating this section to learn more about native tokens, smart contracts,
-and scalability solutions on Cardano. You will also find release notes and links
-to the ecosystem builder tools and weekly development updates.
+and scalability solutions on Cardano. You will also find release notes, links
+to the ecosystem builder tools, and weekly development updates.
