Replace a link to the Haskell course

--- a/docs/pioneer-programs/01-plutus-pioneers.mdx
+++ b/docs/pioneer-programs/01-plutus-pioneers.mdx
@@ -10,7 +10,7 @@ sidebar_position: 1
 > enrolling in the Plutus Pioneer program.
 
 > In preparation, we recommend that you complete our new self-paced
-> [Haskell Bootcamp](https://iohk.instructure.com/courses/141) course. This
+> [Haskell Bootcamp](https://github.com/input-output-hk/haskell-course?tab=readme-ov-file#haskell-course) course. This
 > stepping stone course offers unique code examples and interesting exercises
 > that have prepared solutions to help you can learn the fundamentals of
 > Haskell.
