--- a/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
+++ b/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
@@ -16,9 +16,9 @@ However, if you need compatibility with all components, we recommend using versi
 
 | [Cardano node](https://github.com/IntersectMBO/cardano-node/releases)                         | [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync/releases)                                                                                                                                                           | [Cardano Rosetta server](https://github.com/cardano-foundation/cardano-rosetta/releases)                                                                            | [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql/releases)                                                                                     | [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet/releases)                                                                                                          |
 | --------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **[8.9.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.3)** (enhancements)   |                                                                                                                                                                                                                                       |                                                                                                                                                                     |
-| **[8.9.2](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.2)** (fix)            | [13.2.0.2](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.2.0.2)                                                                                                                                                     | [2.2.2](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.2)                                                                                   | TBD                                                                                                                                                                   | [2024-05-05](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-05-05)                                                                                              |
-| **[8.9.1](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.1)** (minor update)   | [13.2.0.2](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.2.0.2)                                                                                                                                                     |                                                                                                                                                                     | TBD                                                                                                                                                                   | [2024-03-27](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-03-27)                                                                                              |
+| **[8.9.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.3)** (enhancements)   |                                                                                                                                                                                                                                       | [2.2.4](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.4)                                                                                   | [8.1.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.1.0)                                                                                     |                                                                                                                                                                                          |
+| **[8.9.2](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.2)** (fix)            | [13.2.0.2](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.2.0.2)                                                                                                                                                     | [2.2.2](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.2)                                                                                   |                                                                                                                                                                       | [2024-05-05](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-05-05)                                                                                              |
+| **[8.9.1](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.1)** (minor update)   | [13.2.0.2](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.2.0.2)                                                                                                                                                     |                                                                                                                                                                     |                                                                                                                                                                       | [2024-03-27](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-03-27)                                                                                              |
 | **[8.9.0](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.0)** (bug fix)        |                                                                                                                                                                                                                                       |                                                                                                                                                                     | [8.0.3](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.0.3)                                                                                     |                                                                                                                                                                                          |
 | **[8.7.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.3)** (minor bug fix)  | [13.2.0.1](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.2.0.1)                                                                                                                                                     | [2.2.1](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.1)                                                                                   | [8.0.1](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.0.1)/[8.0.2](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.0.2)   | [2024-03-01](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-03-01)                                                                                              |
 | **[8.7.2](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.2)** (major update)   |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
