Delete outdated link

--- a/docs/about-cardano/05-evolution/04-upgrades/06-valentine.mdx
+++ b/docs/about-cardano/05-evolution/04-upgrades/06-valentine.mdx
@@ -31,15 +31,10 @@ After the new cryptographic primitives implementation, Plutus can easily verify 
 
 ## Example scripts
 
-Below are links to examples of scripts and script data files containing the inputs to be used for working with SECP256k1 elliptic curves.
+Below is a link to examples of scripts and script data files containing the inputs for working with SECP256k1 elliptic curves.
 
 The use of these scripts is similar to a [token minting process](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/plutus/plutus-minting-script-example.md), where you build a transaction to mint a token using `--mint-script-file` with a provided Plutus script and `--mint-redeemer-file` for provided input script data.
 
-:::info
-
--   See the tutorial on [how to use SECP256K1 primitives](https://github.com/input-output-hk/Vasil-testnet/blob/main/secp-primitives-cip.md)
--   and the [PlutusTx API](https://github.com/input-output-hk/plutus/blob/node/1.35.4/plutus-tx/src/PlutusTx/Builtins.hs#L169-L202).
-
-:::
+See the tutorial on [how to use SECP256K1 primitives](https://github.com/input-output-hk/Vasil-testnet/blob/main/secp-primitives-cip.md).
 
 
