Update a list of relevant research papers with 2023-2024 papers

--- a/docs/about-cardano/04-explore-more/12-relevant-research-papers.mdx
+++ b/docs/about-cardano/04-explore-more/12-relevant-research-papers.mdx
@@ -66,6 +66,16 @@ environment once the majority of nodes are run by network participants.
 
 [Coalition-Safe Equilibria with Virtual Payoffs](https://arxiv.org/pdf/2001.00047.pdf)
 
+[Efficient Random Beacons with Adaptive Security for Ungrindable Blockchains](https://iohk.io/en/research/library/papers/efficient-random-beacons-with-adaptive-security-for-ungrindable-blockchains/)
+
+[SecureCyclon: Dependable Peer Sampling](https://iohk.io/en/research/library/papers/securecyclon-dependable-peer-sampling/)
+
+[Practical Settlement Bounds for Longest-Chain Consensus](https://iohk.io/en/research/library/papers/practical-settlement-bounds-for-longest-chain-consensus/)
+
+[Blockchain Participation Games](https://iohk.io/en/research/library/papers/blockchain-participation-games/)
+
+[Consensus Redux: Distributed Ledgers in the Face of Adversarial Supremacy](https://iohk.io/en/research/library/papers/consensus-redux-distributed-ledgers-in-the-face-of-adversarial-supremacy/)
+
 **Relevant specifications:**
 
 [Engineering Design Specification for Delegation and Incentives in Cardano–Shelley](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/shelley-delegation.pdf "Design Specification for Delegation and Incentives in Cardano")
@@ -100,6 +110,10 @@ and non-fungible token standards.
 
 [Translation Certification for Smart Contracts](https://iohk.io/en/research/library/papers/translation-certification-for-smart-contracts/)
 
+[Message-passing in the Extended UTxO Ledger Model](https://iohk.io/en/research/library/papers/message-passing-in-the-extended-utxo-ledger-model/)
+
+[Structured Contracts in the EUTxO Ledger Model](https://iohk.io/en/research/library/papers/structured-contracts-in-the-eutxo-ledger-model/)
+
 **Relevant specifications:**
 
 [A Formal Specification of the Cardano Ledger with a Native
@@ -128,6 +142,12 @@ potential to extend the network’s capabilities.
 
 [Djed: A Formally Verified Crypto-Backed Pegged Algorithmic Stablecoin](https://iohk.io/en/research/library/papers/djeda-formally-verified-crypto-backed-pegged-algorithmic-stablecoin/)
 
+[State Machines across Isomorphic Layer 2 Ledgers](https://iohk.io/en/research/library/papers/state-machines-across-isomorphic-layer-2-ledgers/)
+
+[Tiered Mechanisms for Blockchain Transaction Fees](https://iohk.io/en/research/library/papers/tiered-mechanisms-for-blockchain-transaction-fees/)
+
+[Approximate Lower Bound Arguments](https://iohk.io/en/research/library/papers/approximate-lower-bound-arguments/)
+
 **Relevant specifications:**
 
 [Formal Specification of the Cardano Ledger for the Babbage era](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/babbage-ledger.pdf "Formal Specification of the Cardano Ledger for the Babbage era")
@@ -147,8 +167,12 @@ future development of the blockchain.
 
 [SoK: Blockchain Governance](https://iohk.io/en/research/library/papers/sokblockchain-governance/)
 
+[Fait Accompli Committee Selection: Improving the Size-Security Tradeoff of Stake-Based Committees](https://iohk.io/en/research/library/papers/fait-accompli-committee-selection-improving-the-size-security-tradeoff-of-stake-based-committees/)
+
 **Relevant specifications:**
 
 [CIP-1694: An On-Chain Decentralized Governance Mechanism for Voltaire](https://github.com/JaredCorduan/CIPs/blob/voltaire-v1/CIP-1694/README.md)
 
 Formal specification is a work in progress
+
+[Formal specification of the Cardano blockchain ledger, mechanized in Agda](https://iohk.io/en/research/library/papers/formal-specification-of-the-cardano-blockchain-ledger-mechanized-in-agda/)
