--- a/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
+++ b/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
@@ -12,12 +12,12 @@ conjunction with the Cardano component dependencies definition.
 If you only require using the node, such as interacting directly with the node
 or managing stake pool operations, we recommend the latest node version. 
 However, if you need compatibility with all components, we recommend using version
-[8.7.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.3).
+[9.1.0](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.0).
 
 | [Cardano node](https://github.com/IntersectMBO/cardano-node/releases)                         | [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync/releases)                                                                                                                                                           | [Cardano Rosetta server](https://github.com/cardano-foundation/cardano-rosetta/releases)                                                                            | [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql/releases)                                                                                     | [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet/releases)                                                                                                          |
 | --------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **[9.1.0](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.0)** (update)  |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
-| **[9.0.0](https://github.com/IntersectMBO/cardano-node/releases/tag/9.0.0)** (major release)  |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
+| **[9.1.0](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.0)** (update)         | [13.3.0.0](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.3.0.0)                                                                                                                                                     | [2.3.0](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.3.0)                                                                                   | In progress                                                                                                                                                           | [2024-07-27](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-07-27)                                                                                              |
+| **[9.0.0](https://github.com/IntersectMBO/cardano-node/releases/tag/9.0.0)** (major release)  | [13.3.0.0](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.3.0.0)                                                                                                                                                     |                                                                                                                                                                     |                                                                                                                                                                       | [2024-07-19](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-07-19)                                                                                              |
 | **[8.12.2](https://github.com/IntersectMBO/cardano-node/releases/tag/8.12.2)** (fix)          |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
 | **[8.9.4](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.4)** (fix)            |                                                                                                                                                                                                                                       | [2.2.5](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.5)                                                                                   |                                                                                                                                                                       |                                                                                                                                                                                          |
 | **[8.9.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.3)** (enhancements)   |                                                                                                                                                                                                                                       | [2.2.4](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.4)                                                                                   | [8.1.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.1.0)                                                                                     |                                                                                                                                                                                          |
