Fix two broken links to Developer Portal tutorials

--- a/docs/cardano-testnets/02-getting-started.mdx
+++ b/docs/cardano-testnets/02-getting-started.mdx
@@ -17,7 +17,7 @@ The Cardano node can run on the following platforms:
 - Linux Mint 19.3 (Tricia) or later
 - Linux Debian 10.3 (Buster) or later
 - MacOSX 10.14.0 (Mojave) or later
-- Windows 10
+- Windows 10.
 
 ## Installing the node
 
@@ -36,7 +36,7 @@ technical expertise, and personal preferences.
 
 For more information on the various options, see:
 
-- [Installing the node](https://developers.cardano.org/docs/get-started/installing-cardano-node)
+- [Installing the node](https://developers.cardano.org/docs/get-started/cardano-node/installing-cardano-node)
 - [Cardano course: building the node](https://cardano-course.gitbook.io/cardano-course/handbook/module-1-build-and-run-the-node/building-the-node)
 - [Node installation process](https://developers.cardano.org/docs/operate-a-stake-pool/node-installation-process).
 
@@ -57,7 +57,7 @@ than Plutus V1 scripts. Plutus V1 scripts, however, are still supported.
 
 For more details, see:
 
-- [Running the node](https://developers.cardano.org/docs/get-started/running-cardano)
+- [Running the node](https://developers.cardano.org/docs/get-started/cardano-node/running-cardano)
 - [Cardano course: running the node and connecting to a network](https://cardano-course.gitbook.io/cardano-course/handbook/module-1-build-and-run-the-node/running-the-node-and-connecting-to-a-network).
 
 ## Working with the Cardano testnets
