--- a/docs/developer-resources/welcome.mdx
+++ b/docs/developer-resources/welcome.mdx
@@ -79,7 +79,7 @@ There are also many languages you can use to develop smart contracts:
 - [PlutusTx](https://github.com/IntersectMBO/plutus/tree/master/plutus-tx) (Haskell-based language for high assurance)
 - [Marlowe](https://github.com/input-output-hk/marlowe-cardano) (TypeScript),  [Plu-ts](https://github.com/HarmonicLabs/plu-ts) (TypeScript)
 - [OpShin](https://github.com/OpShin/opshin) (Python)
-- [Scalus](https://github.com/nau/scalus) (Scala).
+- [Scalus](https://github.com/nau/scalus) (Scala)
 
 ## Tools
 
@@ -88,7 +88,8 @@ Explore Cardano's ecosystem:
 - [A list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)
 - [Builder tools](https://developers.cardano.org/tools/)
 - [Cardano Cube](https://www.cardanocube.com/cardano-ecosystem-interactive-map)
-- [Built on Cardano](https://builtoncardano.com/).
+- [CTimelines](https://www.ctimelines.io)
+- [Built on Cardano](https://builtoncardano.com/)
 
 ## Going further
 
